Fix github flow

--- a/.github/workflows/generate-mrpack.yaml
+++ b/.github/workflows/generate-mrpack.yaml
@@ -6,7 +6,7 @@ on:
       - "v*.*.*"
 
 jobs:
-  nix-flake-check:
+  generate-mrpack:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
@@ -17,10 +17,10 @@ jobs:
       - name: Export modpack name
         run: echo "PACK_NAME=$(nix develop .#builder --command yq '.name' pack.toml)" >> $GITHUB_ENV
       - name: Add version to modpack name
-        run: echo "PACK_NAME_VERSION=${PACK_NAME}_${{ github.ref_name }}" >> $GITHUB_ENV
+        run: echo "PACK_NAME_VERSION=${PACK_NAME}-${{ github.ref_name }}.mrpack" >> $GITHUB_ENV
       - name: Create mrpack
         run: nix develop .#builder --command packwiz modrinth export --output $PACK_NAME_VERSION
       - name: Upload mrpack
         uses: softprops/action-gh-release@v1
         with:
-          files: $PACK_NAME_VERSION
+          files: ${{ env.PACK_NAME_VERSION }}
