--- a/mods/weaponmaster.pw.toml
+++ b/mods/weaponmaster.pw.toml
@@ -1,13 +1,13 @@
 name = "YDM's Weapon Master"
-filename = "weaponmaster-multi-fabric-1.20.1-3.0.5.jar"
+filename = "weaponmaster-client-only-fabric-1.20.1-3.0.5.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/qi1sj2da/versions/Rlibe5iI/weaponmaster-multi-fabric-1.20.1-3.0.5.jar"
+url = "https://cdn.modrinth.com/data/qi1sj2da/versions/vC06Ct3m/weaponmaster-client-only-fabric-1.20.1-3.0.5.jar"
 hash-format = "sha1"
-hash = "f4720175cca7054dfcea2eb408583c193ced2c42"
+hash = "cab5822a1c7e76bbe23c6cd07fb5468d10349c1b"
 
 [update]
 [update.modrinth]
 mod-id = "qi1sj2da"
-version = "Rlibe5iI"
+version = "vC06Ct3m"
