--- a/.github/workflows/generate-mrpack.yaml
+++ b/.github/workflows/generate-mrpack.yaml
@@ -14,17 +14,11 @@ jobs:
         uses: actions/checkout@v4
       - name: Install Nix
         uses: cachix/install-nix-action@v23
-      - name: Enter nix develop
-        uses: nicknovitski/nix-develop@v1
-        with:
-          arguments: ./dev#builder
-      - name: Export modpack name
-        run: |
-          PACK_NAME=$(yq '.name' ${{ github.workspace }}/pack.toml)
-          echo "PACK_NAME_VERSION=${PACK_NAME}-${{ github.ref_name }}.mrpack" >> $GITHUB_ENV
       - name: Create mrpack
-        run: packwiz modrinth export --pack-file ${{ github.workspace }}/pack.toml --output ${{ github.workspace }}/$PACK_NAME_VERSION
+        run: |
+          OUTPUT_PATH=$(nix build .#modrinth-pack --print-out-paths)
+          echo "OUTPUT_PATH=$OUTPUT_PATH" >> $GITHUB_ENV
       - name: Upload mrpack
         uses: softprops/action-gh-release@v1
         with:
-          files: "${{ github.workspace }}/${{ env.PACK_NAME_VERSION }}"
+          files: "${{ env.OUTPUT_PATH }}/*"
