--- a/pack.toml
+++ b/pack.toml
@@ -1,6 +1,6 @@
-name = "Endering"
+name = "FabricModpack"
 author = "Pablo Peraza"
-version = "0.0.1"
+version = "2023.11.11"
 pack-format = "packwiz:1.1.0"
 
 [index]
