--- a/mods/artifacts.pw.toml
+++ b/mods/artifacts.pw.toml
@@ -1,13 +1,13 @@
 name = "Artifacts"
-filename = "artifacts-fabric-9.2.0.jar"
+filename = "artifacts-fabric-9.3.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/P0Mu4wcQ/versions/bbR3MLn5/artifacts-fabric-9.2.0.jar"
+url = "https://cdn.modrinth.com/data/P0Mu4wcQ/versions/IfIR5Ism/artifacts-fabric-9.3.0.jar"
 hash-format = "sha1"
-hash = "13438fc854d06c6c89e618316e7df02826e20cbd"
+hash = "64900adba49019941421639e8a64d2ecf726dc61"
 
 [update]
 [update.modrinth]
 mod-id = "P0Mu4wcQ"
-version = "bbR3MLn5"
+version = "IfIR5Ism"
