--- a/mods/botania.pw.toml
+++ b/mods/botania.pw.toml
@@ -1,13 +1,13 @@
 name = "Botania"
-filename = "Botania-1.20.1-441-FABRIC.jar"
+filename = "Botania-1.20.1-443-FABRIC.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/pfjLUfGv/versions/XiOSfzIW/Botania-1.20.1-441-FABRIC.jar"
+url = "https://cdn.modrinth.com/data/pfjLUfGv/versions/s3EM29A3/Botania-1.20.1-443-FABRIC.jar"
 hash-format = "sha1"
-hash = "7bc78527d6a70766550315a2d4b0691072144604"
+hash = "cf8dcd56b3d362791bfa36b2474ff0da10796b57"
 
 [update]
 [update.modrinth]
 mod-id = "pfjLUfGv"
-version = "XiOSfzIW"
+version = "s3EM29A3"
