--- a/mods/nether-depths-upgrade.pw.toml
+++ b/mods/nether-depths-upgrade.pw.toml
@@ -1,13 +1,13 @@
 name = "Nether Depths Upgrade"
-filename = "netherdepthsupgrade-fabric-3.1.1-1.20.jar"
+filename = "netherdepthsupgrade-fabric-3.1.5-1.20.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/vI1QKJro/versions/loXsK6pI/netherdepthsupgrade-fabric-3.1.1-1.20.jar"
+url = "https://cdn.modrinth.com/data/vI1QKJro/versions/4BBCXAgd/netherdepthsupgrade-fabric-3.1.5-1.20.jar"
 hash-format = "sha1"
-hash = "953ffd33f94431de96de5e7382033943b7efe3c3"
+hash = "a10ac0186b85e306402eb97bee2bc76599e64047"
 
 [update]
 [update.modrinth]
 mod-id = "vI1QKJro"
-version = "loXsK6pI"
+version = "4BBCXAgd"
