--- a/mods/npc-variety.pw.toml
+++ b/mods/npc-variety.pw.toml
@@ -1,13 +1,13 @@
 name = "NPC Variety"
-filename = "npc-variety-1.20-2.3.0.jar"
+filename = "npc-variety-1.20.4-2.3.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/GYQZng8F/versions/149C8vZB/npc-variety-1.20-2.3.0.jar"
+url = "https://cdn.modrinth.com/data/GYQZng8F/versions/48fYulww/npc-variety-1.20.4-2.3.0.jar"
 hash-format = "sha1"
-hash = "17ca9911d5c3e8d29492383568cc5a21f6f3492a"
+hash = "4a51d516dcc1e989659b4e747cb92635ce577d82"
 
 [update]
 [update.modrinth]
 mod-id = "GYQZng8F"
-version = "149C8vZB"
+version = "48fYulww"
