--- a/mods/skills.pw.toml
+++ b/mods/skills.pw.toml
@@ -1,13 +1,13 @@
 name = "Pufferfish's Skills"
-filename = "puffish_skills-0.10.0-1.20-fabric.jar"
+filename = "puffish_skills-0.11.3-1.20-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/hqQqvaa4/versions/VwEQfSf8/puffish_skills-0.10.0-1.20-fabric.jar"
+url = "https://cdn.modrinth.com/data/hqQqvaa4/versions/G4FPPLKR/puffish_skills-0.11.3-1.20-fabric.jar"
 hash-format = "sha1"
-hash = "b4bf52b6872ededcd8461e0cdaf690437823420a"
+hash = "b12c6d72ea720e97f69996b6fbdeeb635bca1a10"
 
 [update]
 [update.modrinth]
 mod-id = "hqQqvaa4"
-version = "VwEQfSf8"
+version = "G4FPPLKR"
