--- a/mods/spectrum.pw.toml
+++ b/mods/spectrum.pw.toml
@@ -1,13 +1,13 @@
 name = "Spectrum"
-filename = "spectrum-1.7.3-deeper-down.jar"
+filename = "spectrum-1.7.7-deeper-down.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/3rc31Hgo/versions/tqrGGHSK/spectrum-1.7.3-deeper-down.jar"
+url = "https://cdn.modrinth.com/data/3rc31Hgo/versions/TAEijMIU/spectrum-1.7.7-deeper-down.jar"
 hash-format = "sha1"
-hash = "f4aedbae94dda24a6216a0fb2c8fc698358fda67"
+hash = "8900f5c276acf2551e4139c3428938e21a4bc20b"
 
 [update]
 [update.modrinth]
 mod-id = "3rc31Hgo"
-version = "tqrGGHSK"
+version = "TAEijMIU"
