--- a/mods/yungs-menu-tweaks.pw.toml
+++ b/mods/yungs-menu-tweaks.pw.toml
@@ -1,13 +1,13 @@
 name = "YUNG's Menu Tweaks"
-filename = "YungsMenuTweaks-1.20.1-Fabric-1.0.1.jar"
+filename = "YungsMenuTweaks-1.20.1-Fabric-1.0.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Hcy2DFKF/versions/JYUAcBh3/YungsMenuTweaks-1.20.1-Fabric-1.0.1.jar"
+url = "https://cdn.modrinth.com/data/Hcy2DFKF/versions/QRV0K267/YungsMenuTweaks-1.20.1-Fabric-1.0.2.jar"
 hash-format = "sha1"
-hash = "3d76a1e4e4edf79f337a262a66c10d8f34ed6cfb"
+hash = "1f7bf210c95b3e9d12bc164f2fb00a2204dc2fd8"
 
 [update]
 [update.modrinth]
 mod-id = "Hcy2DFKF"
-version = "JYUAcBh3"
+version = "QRV0K267"
