--- a/pack.toml
+++ b/pack.toml
@@ -1,6 +1,6 @@
 name = "Joaqim's Minecraft Modpack"
 author = "Joaqim Planstedt <mail@joaqim.xyz>"
-version = "1.0.1-rc3"
+version = "1.0.2"
 pack-format = "packwiz:1.1.0"
 
 [index]
