--- a/.github/workflows/generate-mrpack.yaml
+++ b/.github/workflows/generate-mrpack.yaml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   generate-mrpack:
+    if: false  # This disables the entire workflow
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
